--- a/next-gen-ui/final/web/index.html
+++ b/next-gen-ui/final/web/index.html
@@ -23,13 +23,13 @@
   <!-- iOS meta tags & icons -->
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
-  <meta name="apple-mobile-web-app-title" content="flutter_scifi">
+  <meta name="apple-mobile-web-app-title" content="next_gen_ui">
   <link rel="apple-touch-icon" href="icons/Icon-192.png">
 
   <!-- Favicon -->
   <link rel="icon" type="image/png" href="favicon.png"/>
 
-  <title>flutter_scifi</title>
+  <title>next_gen_ui</title>
   <link rel="manifest" href="manifest.json">
 
   <script>
