Force canvaskit renderer on web

--- a/next-gen-ui/final/web/index.html
+++ b/next-gen-ui/final/web/index.html
@@ -41,6 +41,7 @@
 </head>
 <body>
   <script>
+    window.flutterWebRenderer = 'canvaskit';
     window.addEventListener('load', function(ev) {
       // Download main.dart.js
       _flutter.loader.loadEntrypoint({
