--- a/next-gen-ui/final/web/index.html
+++ b/next-gen-ui/final/web/index.html
@@ -41,15 +41,16 @@
 </head>
 <body>
   <script>
-    window.flutterWebRenderer = 'canvaskit';
-    window.addEventListener('load', function(ev) {
+    window.addEventListener('load', function (ev) {
       // Download main.dart.js
       _flutter.loader.loadEntrypoint({
         serviceWorker: {
           serviceWorkerVersion: serviceWorkerVersion,
         },
-        onEntrypointLoaded: function(engineInitializer) {
-          engineInitializer.initializeEngine().then(function(appRunner) {
+        onEntrypointLoaded: function (engineInitializer) {
+          engineInitializer.initializeEngine({
+            renderer: 'canvaskit'
+          }).then(function (appRunner) {
             appRunner.runApp();
           });
         }
