--- a/firebase-auth-flutterfire-ui/start/web/index.html
+++ b/firebase-auth-flutterfire-ui/start/web/index.html
@@ -36,7 +36,7 @@
   <script src="https://apis.google.com/js/platform.js" async defer></script>
   <script>
     // The value below is injected by flutter build, do not touch.
-    var serviceWorkerVersion = null;
+    const serviceWorkerVersion = null;
   </script>
   <!-- This script adds the flutter initialization JS code -->
   <script src="flutter.js" defer></script>
