--- a/google-maps-in-flutter/step_4/web/index.html
+++ b/google-maps-in-flutter/step_4/web/index.html
@@ -37,7 +37,7 @@
 
   <script>
     // The value below is injected by flutter build, do not touch.
-    var serviceWorkerVersion = null;
+    const serviceWorkerVersion = null;
   </script>
   <!-- This script adds the flutter initialization JS code -->
   <script src="flutter.js" defer></script>
