--- a/firebase-auth-flutterfire-ui/complete/web/index.html
+++ b/firebase-auth-flutterfire-ui/complete/web/index.html
@@ -23,7 +23,7 @@
   <meta name="google-signin-client_id" content="963656261848-bor24o4vro2n6fo65h1tc7ktv7d3j065.apps.googleusercontent.com">
 
   <!-- iOS meta tags & icons -->
-  <meta name="apple-mobile-web-app-capable" content="yes">
+  <meta name="mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
   <meta name="apple-mobile-web-app-title" content="complete">
   <link rel="apple-touch-icon" href="icons/Icon-192.png">
