Standardise the build file

--- a/firebase-auth-flutterfire-ui/complete/web/index.html
+++ b/firebase-auth-flutterfire-ui/complete/web/index.html
@@ -25,13 +25,13 @@
   <!-- iOS meta tags & icons -->
   <meta name="mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
-  <meta name="apple-mobile-web-app-title" content="complete">
+  <meta name="apple-mobile-web-app-title" content="firebase_auth_flutterfire_ui">
   <link rel="apple-touch-icon" href="icons/Icon-192.png">
 
   <!-- Favicon -->
   <link rel="icon" type="image/png" href="favicon.png"/>
 
-  <title>complete</title>
+  <title>firebase_auth_flutterfire_ui</title>
   <link rel="manifest" href="manifest.json">
   <script src="https://apis.google.com/js/platform.js" async defer></script>
 </head>
